--- a/ListaDeTarefas/Views/Tarefa/Details.cshtml
+++ b/ListaDeTarefas/Views/Tarefa/Details.cshtml
@@ -10,6 +10,6 @@
 <p><b>Data de conclusão:</b> @Model.DataConclusao</p>
 <div>
     <a asp-action="Edit" class="btn btn-outline-info" asp-route-id="@Model.ID">Editar</a>
-    <a asp-action="Concluir" class="btn btn-outline-success me-3" asp-route-id="@Model.ID">Concluir</a>
+    <a asp-action="Concluir" class="btn btn-outline-success me-3" asp-route-id="@Model.ID"><i class="bi bi-check2-circle"></i></a>
     <a asp-action="Index">Voltar</a>
 </div>
