--- a/ListaDeTarefas/Views/Tarefa/Create.cshtml
+++ b/ListaDeTarefas/Views/Tarefa/Create.cshtml
@@ -13,5 +13,8 @@
         <input asp-for="Descricao" class="form-control " />
         <span asp-validation-for="Descricao" class="text-danger"></span>
     </div>
-    <button type="submit" class="mt-3 btn btn-primary">Adicionar</button>
+    <div class="mt-3">
+        <button type="submit" class="me-3 btn btn-primary">Adicionar</button>
+        <a asp-action="Index" >Voltar</a>
+    </div>
 </form>
