--- a/ListaDeTarefas/Views/Tarefa/Create.cshtml
+++ b/ListaDeTarefas/Views/Tarefa/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Tarefa
 
-<h2>Adicionar Tarefa</h2>
+<h2 class="mt-5">Adicionar Tarefa</h2>
 
 <form asp-action="Create" method="post" class="col-6">
     <div class="form-group">
