--- a/ListaDeTarefas/Views/Tarefa/Edit.cshtml
+++ b/ListaDeTarefas/Views/Tarefa/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Tarefa
 
-<h2>Editar Tarefa</h2>
+<h2 class="mt-5">Editar Tarefa</h2>
 
 <form asp-action="Edit" method="post" class="col-6">
     <input type="hidden" asp-for="ID" />
